--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+
